add new fields