@@ -1,27 +1,24 @@
 package ru.volkov.getpass.data.generator;
 
-import java.time.LocalDateTime;
-import java.util.Random;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import ru.volkov.getpass.data.entity.Company;
-import ru.volkov.getpass.data.entity.Contact;
-import ru.volkov.getpass.data.entity.Status;
-import ru.volkov.getpass.data.entity.User;
-import ru.volkov.getpass.data.repository.CompanyRepository;
-import ru.volkov.getpass.data.repository.ContactRepository;
-import ru.volkov.getpass.data.repository.StatusRepository;
 import com.vaadin.flow.spring.annotation.SpringComponent;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.vaadin.artur.exampledata.DataType;
 import org.vaadin.artur.exampledata.ExampleDataGenerator;
+import ru.volkov.getpass.data.entity.*;
+import ru.volkov.getpass.data.repository.CompanyRepository;
+import ru.volkov.getpass.data.repository.ContactRepository;
+import ru.volkov.getpass.data.repository.StatusRepository;
 import ru.volkov.getpass.data.repository.UserRepository;
+
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @SpringComponent
 public class DataGenerator {
@@ -63,7 +60,15 @@ public class DataGenerator {
             }).collect(Collectors.toList());
 
             contactRepository.saveAll(contacts);
-            userRepository.saveAll(List.of(new User("Vasia"),new User("Petya")));
+            List<User> users = Arrays.asList(
+                    new User(Role.OWNER, "OOO OWNER", "owner", "owner@email.ru", "+7 (777) 777-77-77"),
+                    new User(Role.GUARD, "Guard Vasia", "guard", "guard@email.ru", "+6 (666) 666-66-66"),
+                    new User(Role.COMPANY, "OOO COMPANY", "company", "company@email.ru", "+5 (555) 555-55-55"),
+                    new User(Role.COMPANY, "OOO ROGA&COPITA", "rogacopita", "rogacopita@email.ru", "+8 (888) 888-88-88"),
+                    new User(Role.EMPLOYEE, "Employee Ivan", "employee", "employee@email.ru", "+4 (444) 444-44-44"),
+                    new User(Role.EMPLOYEE, "Anansky Andrey", "mhsn", "mhsn@email.ru", "+9 (999) 999-99-99")
+            );
+            userRepository.saveAll(users);
 
             logger.info("Generated demo data");
         };
